--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="title" content="X-Clone">
+    <meta name="description" content="X ( 前 Twitter ) 全端複製品">
+    <meta name="keywords" content="X-Clone">
+    
+    <meta property="og:title" content="X-Clone">
+    <meta property="og:description" content="X ( 前 Twitter ) 全端複製品">
+    <meta property="og:image" content="xClone.png">
+    <meta property="og:url" content="https://github.com/Chewsday2024/full-stack-x-clone">
+    <meta property="og:type" content="website">
+
     <title>X-Clone</title>
   </head>
   <body>
